# pymopac

./: .gitignore  .readthedocs.yml  MOPAC Error message.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/: README.md  conf.py  environment.yml  index.rst  modules.rst  pymopac.rst  requirements.txt
docs/.old/: pymopac.rst
pymopac/: MOPAC Error message.txt  __init__.py  classes.py  helpers.py  input.py  output.py
pymopac/API/: __init__.py  api_helpers.py  api_subroutines.py  api_types.py
tests/: conftest.py  manual_plot.py  test_API_overlap.py  test_Input.py  test_InputOutput.py  test_Output.py  test_dependencies.py  test_geo2mol.py  test_gracefulFailure.py  test_import.py  test_mopac.py  test_noDeps.py  test_parsing.py  test_salts.py  test_stream.py  test_verbose.py  test_xyzParsing.py  test_xyzchecker.py
tests/benchmarks/: bench_report.py  benchmark.md
tests/benchmarks/accuracy/: README.md  accuracy_benchmark.py  analysis.py  pddg_smiles.csv  result.csv
tests/benchmarks/speedtest/: README.md  api_bench.py  bench_report.py  benchmark.md
tests/performance/: manymols.py
tests/performance/manymols/: infile.arc  infile.mop  infile.out  launch.py  launch.sh
